# 3.3.2_Pusher

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kangjj/pusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/kangjj/pusher/: AudioChannel.java  CameraHelper.java  MainActivity.java  NEPusher.java  VideoChannel.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/kangjj/pusher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
资料/视频推流/: FLV.md  NV21与I420.md  RTMPDump与X264.md  build_x264.sh  课堂笔记.md
